# aap_status

./: .gitignore  Cargo.toml  aap_status-dece6a8307be36cd.js  aap_status-dece6a8307be36cd_bg.wasm  index.html  sw.js
src/: app.rs  github.rs  lib.rs  main.rs  pulls.rs  table.rs
src/github/: github_client.rs  mod.rs  pulls.rs  runs.rs  teams.rs  workflows.rs
src/ui/: table.rs
